--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <footer>
-             <h3>Copyright &copy 2018 TecToon </h3>
+             <h3>Copyright &copy; 2018 TecToon </h3>
 
             <ul>
                     <li>Company Number: 123 </li>
