--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
                 <ul>
                    
-                    <li><a href="#">About</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Games</a></li>
                     <li><a href="#">Tamplets</a></li>
@@ -151,7 +151,7 @@
 
             <div class="footer-right-right">
                     <h2>Visit US</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2239.1346970992004!2d-4.247742248708987!3d55.860329380487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488846a0558f6bdb%3A0xf964a2fbcbe74dc6!2sCollabor8te!5e0!3m2!1sen!2suk!4v1516963569566" width="450" height="250" frameborder="1" style="border:0" allowfullscreen></iframe>                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2239.1346970992004!2d-4.247742248708987!3d55.860329380487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488846a0558f6bdb%3A0xf964a2fbcbe74dc6!2sCollabor8te!5e0!3m2!1sen!2suk!4v1516963569566" width="450" height="250" style="border:0" allowfullscreen></iframe>                    
             </div>
         </div>
     </div>
