add product page

--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
         <nav>
             <div>
                 <ul>
-                    <li> <a href="./index.html">Tec
+                    <li><a href="./index.html">Tec
                         <span class="name-right">Toon</span></a>
                     </li>
                 </ul>
@@ -22,10 +22,10 @@
                         <a href="./index.html">home</a>
                     </li>
                     <li>
-                        <a href="#">about</a>
+                        <a href="./about.html">about</a>
                     </li>
                     <li>
-                        <a href="./project.html">Projects</a>
+                        <a href="#">Projects</a>
                     </li>
                     <li>
                         <a href="#">Games</a>
@@ -42,9 +42,69 @@
     </header>
 
 
-    <div class="con-three-up">
+    <div class="con-three-up container-box-one">
         <div class="container-three">
-            <h1>About TecToon</h1>
+            <h1>Weegie Game</h1>
+            <p>
+                Velit ornare a at etiam fermentum. Posuere elit sed porta eget justo duis sem nullam. Nibh orci felis. Sed consectetuer dis
+                ac etiam amet. Et felis dui ut sed est felis at mi. Tempus elementum vulputate. Donec vel pellentesque. Labore
+                non eligendi hymenaeos nulla nulla. Eos posuere molestie. At duis tortor id eros nec. Elit elit proin. Placerat
+                ad pellentesque. Nibh a id dolor porta nisi. Euismod sollicitudin diam. Sit arcu massa. Ut libero lectus.
+                Nonummy aliquet molestie. Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor
+                neque suspendisse consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+                <br>
+                <br> Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor neque suspendisse
+                consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+
+            </p>
+
+            <button>Read Me</button>
+        </div>
+    </div>
+
+    <div class="con-three-up container-box-two">
+        <div class="container-three">
+            <h1>Legodi Welcome  Refugee Pack </h1>
+            <p>
+                Velit ornare a at etiam fermentum. Posuere elit sed porta eget justo duis sem nullam. Nibh orci felis. Sed consectetuer dis
+                ac etiam amet. Et felis dui ut sed est felis at mi. Tempus elementum vulputate. Donec vel pellentesque. Labore
+                non eligendi hymenaeos nulla nulla. Eos posuere molestie. At duis tortor id eros nec. Elit elit proin. Placerat
+                ad pellentesque. Nibh a id dolor porta nisi. Euismod sollicitudin diam. Sit arcu massa. Ut libero lectus.
+                Nonummy aliquet molestie. Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor
+                neque suspendisse consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+                <br>
+                <br> Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor neque suspendisse
+                consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+
+            </p>
+
+            <button>Read Me</button>
+        </div>
+    </div>
+
+    <div class="con-three-up container-box-three">
+        <div class="container-three">
+            <h1>Eribognal Food Mapping Glasgow</h1>
+            <p>
+                Velit ornare a at etiam fermentum. Posuere elit sed porta eget justo duis sem nullam. Nibh orci felis. Sed consectetuer dis
+                ac etiam amet. Et felis dui ut sed est felis at mi. Tempus elementum vulputate. Donec vel pellentesque. Labore
+                non eligendi hymenaeos nulla nulla. Eos posuere molestie. At duis tortor id eros nec. Elit elit proin. Placerat
+                ad pellentesque. Nibh a id dolor porta nisi. Euismod sollicitudin diam. Sit arcu massa. Ut libero lectus.
+                Nonummy aliquet molestie. Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor
+                neque suspendisse consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+                <br>
+                <br> Elementum at orci quis dolor in consectetuer nunc sem nunc vel iaculis hac ac porttitor neque suspendisse
+                consequat tellus id scelerisque nulla sapien et id aliquam rutrum molestie facilisis vitae
+
+            </p>
+
+            <button>Read Me</button>
+        </div>
+    </div>
+
+    <div class="con-three-up container-box-four">
+        <div class="container-three">
+            <h1>KPC</h1>
             <p>
                 Velit ornare a at etiam fermentum. Posuere elit sed porta eget justo duis sem nullam. Nibh orci felis. Sed consectetuer dis
                 ac etiam amet. Et felis dui ut sed est felis at mi. Tempus elementum vulputate. Donec vel pellentesque. Labore
@@ -65,7 +125,7 @@
  
 
 
-    <div class="top-footer">
+    <div class="top-footer ">
         <div class="footer footer-left">
             <div>
                 <h2>DEVELOPING INNOVATIVE STRATEGIES</h2>
@@ -87,7 +147,7 @@
             </div>
         </div>
 
-        <div class="footer footer-right">
+        <div class="footer footer-right ">
 
 
             <div>
