--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <nav>
             <div>
                 <ul>
-                <li>Tec
-                    <span class="name-right">Toon</span>
-                </li>
+                    <li><a href="./index.html">Tec
+                    <span class="name-right">Toon</span></a>
+                </li> 
                 </ul>
                 <ul>
                    
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="./project.html">Projects</a></li>
                     <li><a href="#">Games</a></li>
                     <li><a href="#">Tamplets</a></li>
                     <li><a href="#">Contact</a></li>
