--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <div>
                 <ul>
-                    <li><a href="./index.html">Tec
-                    <span class="name-right">Toon</span></a>
+                    <li>Tec
+                    <span class="name-right">Toon</span>
                 </li> 
                 </ul>
                 <ul>
