--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
                         <a href="./about.html">about</a>
                     </li>
                     <li>
-                        <a href="#">Projects</a>
+                        <a href="./project.html">Projects</a>
                     </li>
                     <li>
                         <a href="#">Games</a>
