--- a/project.html
+++ b/project.html
@@ -4,7 +4,8 @@
 <head>
     <title>TecToon</title>
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="icon" href="http://icons.iconarchive.com/icons/iconarchive/red-orb-alphabet/256/Letter-T-icon.png">
+    
 </head>
 
 <body>
